<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp"
    android:orientation="vertical"
    tools:context=".SingleComicInfoFragment">

    <LinearLayout
        android:id="@+id/number_layout"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/metadata_number_label"
            android:textAppearance="@style/label_style" />

        <TextView
            android:id="@+id/num_TV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="@style/metadata_style" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/metadata_safe_title_label"
            android:textAppearance="@style/label_style" />

        <TextView
            android:id="@+id/safe_title_TV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="@style/metadata_style" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/metadata_date_label"
        android:textAppearance="@style/label_style" />

    <LinearLayout
        android:id="@+id/date_layout"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/year_TV"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/month_TV"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/day_TV"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/misc_layout"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/metadata_link_label"
            android:textAppearance="@style/label_style" />

        <TextView
            android:id="@+id/link_TV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="@style/metadata_style" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/metadata_news_label"
            android:textAppearance="@style/label_style" />

        <TextView
            android:id="@+id/news_TV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="@style/metadata_style" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:text="@string/metadata_title_label"
        android:textAppearance="@style/label_style" />

    <TextView
        android:id="@+id/title_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/metadata_style" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:text="@string/metadata_transcript_label"
        android:textAppearance="@style/label_style" />

    <TextView
        android:id="@+id/transcript_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/metadata_style" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:text="@string/metadata_alt_label"
        android:textAppearance="@style/label_style" />

    <TextView
        android:id="@+id/alt_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/metadata_style" />

</androidx.appcompat.widget.LinearLayoutCompat>