<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp"
    tools:context=".SingleComicViewFragment">

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/img_ImgV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        fresco:layout_constraintBottom_toTopOf="@id/navigation"
        fresco:layout_constraintEnd_toEndOf="parent"
        fresco:layout_constraintStart_toStartOf="parent"
        fresco:layout_constraintTop_toTopOf="parent"
        fresco:placeholderImage="@drawable/loading_image"
        fresco:actualImageScaleType="fitCenter"/>

    <LinearLayout
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        fresco:layout_constraintBottom_toBottomOf="parent"
        fresco:layout_constraintEnd_toEndOf="parent"
        fresco:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/first_comic_TV"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/action_to_first_comic"
            android:textAlignment="center"
            android:textAppearance="@style/label_style" />

        <TextView
            android:id="@+id/last_comic_TV"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/action_to_last_comic"
            android:textAlignment="center"
            android:textAppearance="@style/label_style" />

        <TextView
            android:id="@+id/comic_info_TV"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/action_to_comic_info"
            android:textAlignment="center"

            android:textAppearance="@style/label_style" />

        <TextView
            android:id="@+id/next_comic_TV"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/action_to_next_comic"
            android:textAlignment="center"
            android:textAppearance="@style/label_style" />

        <TextView
            android:id="@+id/latest_comic_TV"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/action_to_latest_comic"
            android:textAlignment="center"
            android:textAppearance="@style/label_style" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>